# cerberus

./: .cogfiles  .gitignore  .mergify.yml  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  MANIFEST.in  Makefile  Procfile  README.rst  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  rollup.config.ts  setup.cfg  setup.py  test.py
.circleci/: config.yml
.github/: dependabot.yml
assets/css/: FAB.css  booking.css  buttons.css  calender.css  card.css  checkbox-dropdown.css  customer-list.css  dashboard.css  day.css  dialog.css  dropdown.css  filters.css  form.css  grid.css  htmx.css  icons.css  invoice-form.css  layout.css  links.css  list-customer.css  list-invoice.css  list.css  login.css  main.css  money-input.css  nav.css  pagination.css  pill.css  range-input.css  tables.css  tabs.css  tags.css  toast.css  typography.css  vars.css  year.css
assets/typescript/: alpine.ts  bookings.ts  datetime.ts  events.ts  hello.ts  main.ts  toast.ts  utils.ts
cerberus/: admin.py  api.py  apps.py  asgi.py  exceptions.py  fields.py  filters.py  forms.py  middleware.py  models.py  permissions.py  reports.py  serializers.py  settings.py  urls.py  utils.py  views.py  widgets.py  wsgi.py
cerberus-crm/: asgi.py  settings.py  urls.py  wsgi.py
cerberus-crm/settings/: base.py  dev.py
cerberus/forms/: __init__.py  booking.py  charge.py  contact.py  customer.py  invoice.py  pet.py  service.py  vet.py
cerberus/migrations/: 0001_initial.py  0002_alter_pet_neutered_alter_pet_sex.py  0003_alter_booking_booking_slot_alter_booking_pet_and_more.py  0004_alter_booking_state_alter_service_booked_length_and_more.py  0005_alter_booking_cost.py  0006_alter_customer_vet_alter_pet_customer_alter_pet_vet.py  0007_alter_address_customer_alter_charge_booking_and_more.py  0008_customer_tags_pet_tags.py  0009_auto_20220615_0722.py  0010_remove_pet_flead_wormed_remove_pet_insured_and_more.py  0011_alter_contact_unique_together.py  0012_alter_contact_unique_together.py  0013_alter_pet_vet.py  0014_remove_charge_booking_remove_charge_due_and_more.py  0015_alter_charge_content_type_alter_charge_object_id.py  0016_alter_invoice_details_alter_invoice_due.py  0017_remove_charge_content_type_remove_charge_object_id.py  0018_charge_polymorphic_ctype.py  0019_bookingcharge.py  0020_invoice_customer_name_invoice_sent_to_and_more.py  0021_remove_invoice_name.py  0022_charge_cost_currency_service_cost_currency_and_more.py  0023_charge_paid_on_invoice_paid_on_alter_invoice_due.py  0024_alter_charge_paid_on_alter_invoice_paid_on.py  0025_invoice_sent_on_alter_invoice_due.py  0026_invoice_adjustment_invoice_adjustment_currency.py  0027_customer_invoice_address.py  0028_alter_customer_tags.py  0029_rename_cost_charge_line_and_more.py  0030_alter_customer_invoice_address.py  0031_customer_invoice_email.py  0032_remove_customer_invoice_email.py  0033_alter_invoice_due.py  0034_invoiceopen.py  0035_invoice_invoice_address.py  0036_invoice_send_notes.py  0037_customer_invoice_email.py  0038_auto_20220802_0753.py  0039_alter_invoice_send_notes.py  0040_alter_service_options.py  (+42 more)
cerberus/models/: __init__.py  address.py  booking.py  charge.py  contact.py  customer.py  invoice.py  pet.py  service.py  user_settings.py  vet.py
cerberus/templates/: base.html
cerberus/templatetags/: components.py  date_utils.py  debug_tags.py  field_tags.py  human_duration.py  includes.py  mailto.py  paginator_tags.py  string_utils.py
cerberus/tests/: __init__.py  test_address.py  test_bookings.py  test_charges.py  test_component_tag.py  test_contacts.py  test_customer.py  test_htmx_middleware.py  test_invoices.py  test_mailto.py  test_serializers.py  test_string_utils.py  test_utils.py
cerberus/urls/: api.py  urls.py
cerberus/views/: __init__.py  booking.py  crud_views.py  customer.py  invoice.py  pets.py  transition_view.py  views.py
cerberus_crm/: asgi.py  urls.py  views.py  wsgi.py
cerberus_crm/settings/: base.py  dev.py  production.py
crm/: admin.py  api.py  apps.py  context_processors.py  decorators.py  exceptions.py  filters.py  forms.py  models.py  pagination.py  reports.py  serializers.py  urls.py  utils.py  views.py
crm/migrations/: 0001_initial.py  0002_alter_pet_neutered_alter_pet_sex.py  0003_alter_booking_booking_slot_alter_booking_pet_and_more.py  0004_alter_booking_state_alter_service_booked_length_and_more.py  0005_alter_booking_cost.py  0006_alter_customer_vet_alter_pet_customer_alter_pet_vet.py  0007_alter_address_customer_alter_charge_booking_and_more.py  0008_customer_tags_pet_tags.py  0009_auto_20220615_0722.py  0010_remove_pet_flead_wormed_remove_pet_insured_and_more.py  0011_alter_contact_unique_together.py  0012_alter_contact_unique_together.py  0013_alter_pet_vet.py  0014_remove_charge_booking_remove_charge_due_and_more.py  0015_alter_charge_content_type_alter_charge_object_id.py  0016_alter_invoice_details_alter_invoice_due.py  0017_remove_charge_content_type_remove_charge_object_id.py  0018_charge_polymorphic_ctype.py  0019_bookingcharge.py  0020_invoice_customer_name_invoice_sent_to_and_more.py  0021_remove_invoice_name.py  0022_charge_cost_currency_service_cost_currency_and_more.py  0023_charge_paid_on_invoice_paid_on_alter_invoice_due.py  0024_alter_charge_paid_on_alter_invoice_paid_on.py  0025_invoice_sent_on_alter_invoice_due.py  0026_invoice_adjustment_invoice_adjustment_currency.py  0027_customer_invoice_address.py  0028_alter_customer_tags.py  0029_rename_cost_charge_line_and_more.py  0030_alter_customer_invoice_address.py  0031_customer_invoice_email.py  0032_remove_customer_invoice_email.py  0033_alter_invoice_due.py  0034_invoiceopen.py  0035_invoice_invoice_address.py  0036_invoice_send_notes.py  0037_customer_invoice_email.py  0038_auto_20220802_0753.py  0039_alter_invoice_send_notes.py  0040_alter_service_options.py  (+6 more)
crm/tests/: test_bookings.py  test_charges.py  test_choice_length.py  test_contacts.py  test_utils.py  (+1 more)
src/: manage.py
templates/: base.html  base_html.html  main_nav.html
(+125 files in other folders)
